--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,4 @@
-<body>
+<body style="background-color: black;">
     <button onclick="window.location.reload()">Run Program</button>
     <div id="terminal"></div>
 
